syntax = "proto3";

option csharp_namespace = "ECommerce.Customers.Api.Protos";

package CustomerApi;

service CustomerService {
	rpc CreateCustomer(CreateCustomerRequest) returns(CreateCustomerResponse);
}

message CreateCustomerRequest {
	string id = 1;
	string firstname = 2;
    string lastname = 3;
    Document document = 4;
    Email email = 5;
    Phone phone = 6;
    Address address = 7;
}

message CreateCustomerResponse {
    bool isvalid = 1;
    string message = 2;
    Customer customer = 3;
}

message Customer {
	string id = 1;
	string firstname = 2;
    string lastname = 3;
	Document document = 4;
    Email email = 5;
    Phone phone = 6;
    Address address = 7;
}

message Document {
	string id = 1;
	string number = 2;
    string customerid = 3;
}

message Email {
	string id = 1;
	string address = 2;
    string customerid = 3;
}

message Phone {
	string id = 1;
	string number = 2;
    string customerid = 3;
}

message Address {
	string id = 1;
	string firstline = 2;
    string secondline = 3;
    string city = 4;
    string state = 5;
    string zipcode = 6;
    string customerid = 7;
}
